get item from backend without bff